--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 				</div>
 			</div>
 
-			<div class="image-box">
-				<img src="images/img01.png" alt="image">
-			</div>
+			<div class="image-box"><img src="images/img01.png" alt="image"></div>
 		</div>
 		<!-- content  end  -->
 	</div>
